start layout projects, start design intro

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,49 @@
+@import './stylesheets/main.scss';
+
 body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
   width: 100%;
-  background: #262626;
+  background: $darkGray;
 }
 
 canvas {
   display: block;
   position: absolute;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-#page__intro {
+.page__header {
   min-height: 100vh;
   width: 100%;
+  position: relative;
+}
+
+.title__container {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: rem(20);
+  color: $white;
+  text-transform: capitalize;
+  font-family: $playFair;
+  @media all and (min-width: 768px) {
+    left: rem(100);
+  }
+  .main__title {
+    font-size: rem(50);
+    letter-spacing: rem(5);
+    @media all and (min-width: 768px) {
+      font-size: rem(100);
+    }
+  }
+  .main__position {
+    font-size: rem(40);
+    letter-spacing: rem(3);
+    @media all and (min-width: 768px) {
+      font-size: rem(60);
+    }
+  }
 }
