--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,3 +1,100 @@
 .project__content {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-transform: capitalize;
+  font-family: 'Playfair Display', serif;
+  position: relative;
+}
+
+.project__title {
+  text-align: center;
+}
+
+.project__image {
+  height: 0;
+  width: 0;
+}
+
+.project__image-container {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.project__links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .project__link {
+    margin: 0 10px;
+    .link__github,
+    .link__url {
+      text-decoration: none;
+      color: #000;
+    }
+  }
+}
+
+.learn__more {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.project__details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.slide__data-second,
+.slide__data-first {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.slideIn {
+  animation: slideIn 0.8s forwards;
+  -webkit-animation: slideIn 0.5s forwards;
+}
+
+.slideOut {
+  animation: slideOut 0.2s forwards;
+  -webkit-animation: slideOut 0.5s forwards;
+}
+
+@keyframes slideIn {
+  100% {
+    height: 100%;
+    // left: 0;
+  }
+}
+
+@keyframes slideOut {
+  100% {
+    height: 0;
+    overflow: hidden;
+    // left: -10000px;
+  }
 }
