--- a/src/stylesheets/core/_mixins.scss
+++ b/src/stylesheets/core/_mixins.scss
@@ -3,3 +3,9 @@
   justify-content: $justifyContent;
   align-items: $align;
 }
+
+@mixin mq($bp, $direction: min-width) {
+  @media all and ($direction: rem($bp)) {
+    @content;
+  }
+}
