add styles and sizing to project section on mobile

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -16,11 +16,14 @@
 
 .project__description,
 .project__tools {
-  padding: 0 20px;
-  letter-spacing: 1px;
-  line-height: 1.5em;
-  @media all and (min-width: 1280px) {
+  padding: 4px 7px;
+  margin: 5px 0;
+
+  @media all and (min-width: 1200px) {
     font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 1.5em;
+    padding: 0 20px;
   }
 }
 
