--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,47 +1,185 @@
-// .menu__icon-container {
-//   @include flexLayout('center', 'center');
-//   border: rem(1) solid $white;
-//   border-radius: 50%;
-//   width: rem(40);
-//   height: rem(40);
-//   padding: rem(5);
-//   position: absolute;
-//   top: rem(20);
-//   right: rem(20);
-//   box-shadow: 0 0 1px 3px rgba(0, 0, 0, 0.6);
-//   @media all and (min-width: 768px) {
-//     top: rem(40);
-//     right: rem(40);
-//     width: rem(50);
-//     height: rem(50);
-//   }
-// }
+@import '../../stylesheets/main.scss';
 
-// .nav__icon {
-//   width: rem(30);
-//   &::after,
-//   &::before,
-//   .icon__bars {
-//     // background-color: $white;
-//     border-radius: rem(3);
-//     content: '';
-//     display: block;
-//     height: rem(3);
-//     margin: rem(6) 0;
-//     transition: all 0.2s ease-in-out;
-//   }
-//   @media all and (min-width: 768px) {
-//     width: rem(40);
-//     &::after,
-//     &::before,
-//     .icon__bars {
-//       height: rem(4);
-//       margin: rem(9) 0;
-//       transition: all 0.2s ease-in-out;
-//     }
-//   }
-// }
+.page__nav {
+  min-height: 100vh;
+  position: relative;
+  min-width: 30vw;
+}
 
-// // mq 320px mobile
-// // mq 768ps tablet
-// // mq 1024 desktop
+.page__nav.open {
+  .menu__icon-container {
+    border: none;
+    &:hover {
+      .nav__icon {
+        .icon__bars {
+          transform: scale(1);
+          transition: transform 300ms ease-in-out;
+        }
+        &::after,
+        &::before {
+          transform: scale(0);
+        }
+      }
+    }
+  }
+  .menu__sidebar {
+    perspective: 1000px;
+  }
+  .menu__item {
+    display: flex;
+    opacity: 0;
+    @for $i from 1 through 5 {
+      &:nth-child(#{$i}) {
+        animation: sidebarEffect 100ms * $i ease-in-out (50ms * $i) - 100 forwards;
+      }
+    }
+  }
+
+  .nav__icon {
+    .icon__bars {
+      transform: scale(0);
+    }
+    &::before {
+      width: rem(30);
+      transform: translateY(9px) rotate(135deg);
+    }
+    &::after {
+      width: rem(30);
+      margin-left: 0;
+      transform: translateY(-9px) rotate(-135deg);
+    }
+  }
+  @media all and (min-width: 768px) {
+    .nav__icon {
+      &::before {
+        transform: translateY(13px) rotate(135deg);
+      }
+      &::after {
+        transform: translateY(-13px) rotate(-135deg);
+      }
+    }
+  }
+}
+
+.menu__icon-container {
+  @include flexLayout(center, center);
+  border: rem(2) solid $white;
+  border-radius: 50%;
+  width: rem(40);
+  height: rem(40);
+  padding: rem(5);
+  position: absolute;
+  top: rem(20);
+  right: rem(20);
+  z-index: 6;
+  &:hover {
+    cursor: pointer;
+    // color: #c8c8c8;
+    // .nav__icon {
+    //   &::after,
+    //   &::before {
+    //     width: rem(30);
+    //   }
+    // }
+  }
+  @media all and (min-width: 768px) {
+    // top: rem(40);
+    // right: rem(40);
+    width: rem(50);
+    height: rem(50);
+  }
+}
+
+.nav__icon {
+  width: rem(30);
+  &::after,
+  &::before,
+  .icon__bars {
+    background-color: $white;
+    border-radius: rem(3);
+    content: '';
+    display: block;
+    height: rem(3);
+    margin: rem(6) 0;
+    transition: all 0.2s ease-in-out;
+  }
+  &::after {
+    margin-left: auto;
+  }
+  &::after,
+  &::before {
+    width: rem(18);
+  }
+  @media all and (min-width: 768px) {
+    width: rem(40);
+    &::after,
+    &::before,
+    .icon__bars {
+      height: rem(4);
+      margin: rem(9) 0;
+      transition: all 0.2s ease-in-out;
+    }
+    &::after {
+      margin-left: auto;
+    }
+  }
+}
+
+.menu__sidebar {
+  z-index: 5;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  background-color: #000;
+  min-width: 100vw;
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  @media all and (min-width: 768px) {
+    min-width: 30vw;
+  }
+}
+
+.menu__item {
+  border-bottom: 1px solid $lightGray;
+  display: flex;
+  text-transform: capitalize;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  // &::last-child {
+  //   border-bottom: none;
+  // }
+  .menu__link {
+    color: $lightGray;
+    text-decoration: none;
+    transition: transform 0.3s linear;
+    &:hover {
+      transform: scale(1.2);
+    }
+    @media all and (min-width: 768px) {
+      font-size: rem(20);
+    }
+  }
+}
+
+// mq 320px mobile
+// mq 768ps tablet
+// mq 1024 desktop
+
+@keyframes sidebarEffect {
+  0% {
+    opacity: 0;
+    // transform: rotate(-60deg) translateY(60px);
+    transform: scale(0.3) translateY(-60px);
+  }
+  100% {
+    transform: scale(1) translateY(0px);
+    // transform: rotate(0) translateY(0px);
+    opacity: 1;
+  }
+}
