--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -6,5 +6,11 @@ $lightGray: #c8c8c8;
 
 // sizes (fonts and heights)
 $defaultFontSize: 16;
+
+// break points
+$bp_tablet: 768;
+$bp_desktop: 1024;
+$bp_desktopBig: 1200;
+
 // typography
 $playFair: 'Playfair Display', serif;
