--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,29 +1,29 @@
+@import '../../stylesheets/main.scss';
+
 .project__content {
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
+  @include flexLayout(center, center);
+  color: $white;
   text-transform: capitalize;
-  font-family: 'Playfair Display', serif;
+  font-family: $playFair;
   position: relative;
 }
 
 .project__title {
   text-align: center;
-  padding: 0 20px;
+  padding: 0 rem(20);
 }
 
 .project__description,
 .project__tools {
-  padding: 4px 7px;
-  margin: 5px 0;
+  padding: rem(4) rem(7);
+  margin: rem(5) 0;
 
-  @media all and (min-width: 1200px) {
-    font-size: 18px;
-    letter-spacing: 1px;
+  @include mq($bp_desktopBig) {
+    font-size: rem(18);
+    letter-spacing: rem(1);
     line-height: 1.5em;
-    padding: 0 20px;
+    padding: 0 rem(20);
   }
 }
 
@@ -37,9 +37,6 @@
 }
 
 .project__image-container {
-  position: relative;
-  top: 0;
-  left: 0;
   height: 100%;
   width: 100%;
   background-repeat: no-repeat;
@@ -52,11 +49,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flexLayout(center, center);
   .project__link {
-    margin: 0 10px;
+    margin: 0 rem(10);
     .link__github,
     .link__url {
       text-decoration: none;
@@ -82,32 +77,26 @@
 
 .slide__data-second,
 .slide__data-first {
-  display: flex;
+  @include flexLayout(center, center);
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   text-align: center;
-  position: absolute;
-  top: 0;
-  left: 0;
+  @include layoutAbsolute;
   height: 100%;
   width: 100%;
 }
 
 .slideIn {
   animation: slideIn 0.8s forwards;
-  -webkit-animation: slideIn 0.5s forwards;
 }
 
 .slideOut {
   animation: slideOut 0.2s forwards;
-  -webkit-animation: slideOut 0.5s forwards;
 }
 
 @keyframes slideIn {
   100% {
     height: 100%;
-    // left: 0;
   }
 }
 
@@ -115,6 +104,5 @@
   100% {
     height: 0;
     overflow: hidden;
-    // left: -10000px;
   }
 }
