--- a/src/components/Project/ProjectsList.scss
+++ b/src/components/Project/ProjectsList.scss
@@ -1,3 +1,5 @@
+@import '../../stylesheets/main.scss';
+
 .projects__list {
   min-height: 100vh;
   list-style: none;
@@ -6,7 +8,7 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(2, 1fr);
-  @media all and (min-width: 768px) {
+  @include mq($bp_tablet) {
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(4, 1fr);
   }
@@ -17,17 +19,11 @@
   &:hover {
     background-color: rgba(189, 16, 224, 0.7);
   }
-  @media all and (min-width: 768px) {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-column-start: 1;
-    grid-column-end: 3;
+  @include mq($bp_tablet) {
+    grid-row: 1 / 3;
+    grid-column: 1 / 3;
   }
 }
-
-// .project__item {
-//   padding: 0 20px;
-// }
 
 .project__two {
   background-color: rgb(11, 37, 93);
@@ -48,9 +44,8 @@
   &:hover {
     background-color: rgba(0, 100, 244, 0.7);
   }
-  @media all and (min-width: 768px) {
-    grid-column-start: 3;
-    grid-column-end: 5;
+  @include mq($bp_tablet) {
+    grid-column: 3 / 5;
   }
 }
 .project__five {
@@ -58,9 +53,8 @@
   &:hover {
     background-color: rgba(47, 112, 107, 0.7);
   }
-  @media all and (min-width: 768px) {
-    grid-column-start: 1;
-    grid-column-end: 4;
+  @include mq($bp_tablet) {
+    grid-column: 1 / 4;
   }
 }
 .project__six {
