--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,5 +1,4 @@
 @import '../../stylesheets/main.scss';
-
 .project__content {
   height: 100%;
   @include flexLayout(center, center);
@@ -18,7 +17,6 @@
 .project__tools {
   padding: rem(4) rem(7);
   margin: rem(5) 0;
-
   @include mq($bp_desktopBig) {
     font-size: rem(18);
     letter-spacing: rem(1);
@@ -55,7 +53,7 @@
     .link__github,
     .link__url {
       text-decoration: none;
-      color: #000;
+      color: $black;
     }
   }
 }
@@ -71,12 +69,9 @@
   @include layoutAbsolute;
   height: 100%;
   width: 100%;
-  // transform-style: preserve-3d;
-  // transition: transform 0.5s ease-in-out;
 }
 
-.slide__data-second,
-.slide__data-first {
+.project__panel {
   @include flexLayout(center, center);
   flex-direction: column;
   text-align: center;
@@ -85,21 +80,12 @@
   width: 100%;
 }
 
-// .slide__data-second {
-//   transform: translate(0, -100%) rotateX(90deg);
-//   transform-origin: bottom;
-// }
-
-// .cube {
-//   transform: translate(0, 50%) rotateX(-90deg);
-// }
-
 .slideIn {
   animation: slideIn 0.8s forwards;
 }
 
 .slideOut {
-  animation: slideOut 0.2s forwards;
+  animation: slideOut 0.3s forwards;
 }
 
 @keyframes slideIn {
