--- a/src/components/Project/ProjectsList.scss
+++ b/src/components/Project/ProjectsList.scss
@@ -11,22 +11,36 @@
   @include mq($bp_tablet) {
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    .project__item {
+      &:nth-of-type(1) {
+        grid-row: 1 / 3;
+        grid-column: 1 / 3;
+      }
+      &:nth-of-type(4) {
+        grid-column: 3 / 5;
+      }
+      &:nth-of-type(5) {
+        grid-column: 1 / 4;
+      }
+    }
   }
 }
 
 .project__one {
   background-color: rgb(189, 16, 224);
+}
+
+.project__one.slideIn {
   &:hover {
     background-color: rgba(189, 16, 224, 0.7);
-  }
-  @include mq($bp_tablet) {
-    grid-row: 1 / 3;
-    grid-column: 1 / 3;
   }
 }
 
 .project__two {
   background-color: rgb(11, 37, 93);
+}
+
+.project__two.slideIn {
   &:hover {
     background-color: rgba(11, 37, 93, 0.7);
   }
@@ -34,6 +48,9 @@
 
 .project__three {
   background-color: rgb(232, 99, 99);
+}
+
+.project__three.slideIn {
   &:hover {
     background-color: rgba(232, 99, 99, 0.7);
   }
@@ -41,24 +58,29 @@
 
 .project__four {
   background-color: rgb(0, 100, 244);
+}
+
+.project__four.slideIn {
   &:hover {
     background-color: rgba(0, 100, 244, 0.7);
   }
-  @include mq($bp_tablet) {
-    grid-column: 3 / 5;
-  }
 }
+
 .project__five {
   background-color: rgb(47, 112, 107);
+}
+
+.project__five.slideIn {
   &:hover {
     background-color: rgba(47, 112, 107, 0.7);
   }
-  @include mq($bp_tablet) {
-    grid-column: 1 / 4;
-  }
 }
+
 .project__six {
   background-color: rgb(252, 201, 47);
+}
+
+.project__six.slideIn {
   &:hover {
     background-color: rgba(252, 201, 47, 0.7);
   }
