--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -3,4 +3,70 @@
 #contact {
   min-height: 100vh;
   background-color: $black;
+  color: $white;
+}
+
+.contact__title {
+  font-size: 30px;
+  text-transform: capitalize;
+  margin: 0;
+  padding: 70px 20px 20px;
+  text-align: center;
+}
+
+.form__label {
+  height: 0;
+  width: 0;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.form__input,
+.form__textarea {
+  box-sizing: border-box;
+  font-family: $playFair;
+  background-color: $black;
+  padding: 50px 20px;
+  width: 100%;
+  border: none;
+  color: $white;
+  font-size: 24px;
+  outline: none;
+  transition: all 0.3s ease-in-out;
+  &::placeholder {
+    color: $lightGray;
+    font-size: 24px;
+  }
+  &:focus {
+    box-shadow: 0 5px 5px -5px $lightGray;
+    background-color: $darkGray;
+  }
+}
+
+.form__textarea {
+  resize: none;
+}
+
+.form__group-submit {
+  width: 120px;
+  height: 60px;
+  border-radius: 200px;
+  position: relative;
+  background: linear-gradient(to right, #50e3c2, #e86363);
+  padding: 3px;
+}
+.form__submit {
+  width: 120px;
+  height: 60px;
+  border: 0;
+  display: block;
+  border-radius: 200px;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  color: $white;
+  background: $black;
+  color: white;
+  padding: 2rem;
 }
