basic styles of form on mobile

--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $black: #000;
 $darkGray: #262626;
 $lightGray: #c8c8c8;
+$greenBlue: #50e3c2;
 
 // sizes (fonts and heights)
 $defaultFontSize: 16;
