--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -38,35 +38,38 @@
     font-size: 24px;
   }
   &:focus {
-    box-shadow: 0 5px 5px -5px $lightGray;
     background-color: $darkGray;
   }
 }
 
 .form__textarea {
   resize: none;
+  margin-bottom: 20px;
 }
 
-.form__group-submit {
-  width: 120px;
-  height: 60px;
-  border-radius: 200px;
-  position: relative;
-  background: linear-gradient(to right, #50e3c2, #e86363);
-  padding: 3px;
-}
 .form__submit {
-  width: 120px;
-  height: 60px;
-  border: 0;
+  width: 100px;
+  height: 50px;
+  line-height: 50px;
+  box-shadow: 0px 0px 5px 1px $greenBlue;
+  border: 1px solid $greenBlue;
   display: block;
   border-radius: 200px;
   font-size: 18px;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-align: center;
-  color: $white;
+  color: $greenBlue;
   background: $black;
-  color: white;
-  padding: 2rem;
+  padding: 0;
+  margin: 0 auto;
+  cursor: pointer;
+  font-family: $playFair;
+  letter-spacing: 1px;
+}
+
+.contact__icons-list {
+}
+
+.contact__icon {
 }
