--- a/src/components/Contact/Progress/Progress.scss
+++ b/src/components/Contact/Progress/Progress.scss
@@ -3,13 +3,16 @@
 .progress__bar {
   position: relative;
   height: 20px;
-  width: 350px;
+  width: 70%;
+  max-width: 280px;
+  margin: 0 auto;
   border-radius: 50px;
-  border: 1px solid #333;
+  border: 1px solid $lightGray;
+  box-shadow: 0px 0px 5px 1px $lightGray;
 }
 
 .progress__fill {
-  background: #1da598;
+  background: $greenBlue;
   height: 100%;
   border-radius: inherit;
   transition: width 0.2s ease-in;
