--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,6 +4,14 @@
   min-height: 100vh;
   background-color: $black;
   color: $white;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact__form {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact__title {
@@ -12,6 +20,29 @@
   margin: 0;
   padding: 70px 20px 20px;
   text-align: center;
+}
+
+.form__container {
+  flex-grow: 1;
+  @include mq($bp_tablet) {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    .form__group {
+      &:nth-of-type(1) {
+        grid-column: 1 / 2;
+      }
+      &:nth-of-type(3) {
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+      }
+      &:nth-of-type(2) {
+        grid-column: 1 / 2;
+      }
+    }
+  }
 }
 
 .form__label {
@@ -33,18 +64,22 @@
   font-size: 24px;
   outline: none;
   transition: all 0.3s ease-in-out;
+  height: 100%;
   &::placeholder {
     color: $lightGray;
     font-size: 24px;
+    line-height: normal;
   }
   &:focus {
     background-color: $darkGray;
+  }
+  @include mq($bp_tablet) {
+    padding: 50px 60px;
   }
 }
 
 .form__textarea {
   resize: none;
-  margin-bottom: 20px;
 }
 
 .form__submit {
