--- a/src/components/Contact/Progress/Progress.scss
+++ b/src/components/Contact/Progress/Progress.scss
@@ -5,7 +5,7 @@
   height: 20px;
   width: 70%;
   max-width: 280px;
-  margin: 0 auto;
+  margin: 30px auto;
   border-radius: 50px;
   border: 1px solid $lightGray;
   box-shadow: 0px 0px 5px 1px $lightGray;
