--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -4,6 +4,14 @@ $black: #000;
 $darkGray: #262626;
 $lightGray: #c8c8c8;
 $greenBlue: #50e3c2;
+$redLight: #e86363;
+$purple: #bd10e0;
+$green: #b8e986;
+$yellow: #fcc92f;
+$naviBlue: #314961;
+$darkGreen: #2f706b;
+$blue: #0064f4;
+$darkBlue: #0b255d;
 
 // sizes (fonts and heights)
 $defaultFontSize: 16;
