--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -6,10 +6,10 @@
   color: $white;
   position: relative;
   @include flexLayout(center, center);
-  padding: 20px;
+  padding: rem(20);
   flex-direction: column;
   @include mq($bp_tablet) {
-    padding: 30px 50px;
+    padding: rem(30) rem(50);
   }
 }
 
@@ -24,23 +24,23 @@
 .about__links {
   order: 2;
   display: grid;
-  grid-template-columns: repeat(4, 25px);
-  grid-gap: 30px;
-  margin: 30px 0 0;
+  grid-template-columns: repeat(4, rem(25));
+  grid-gap: rem(30);
+  margin: rem(30) 0 0;
   @include mq($bp_tablet) {
     order: 1;
-    grid-template-columns: 25px;
-    grid-template-rows: repeat(4, 25px);
-    margin: 0 80px 0 0;
+    grid-template-columns: rem(25);
+    grid-template-rows: repeat(4, rem(25));
+    margin: 0 rem(80) 0 0;
   }
   .about__link {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     display: block;
-    text-indent: -9999px;
+    text-indent: rem(-9999);
     &:hover {
-      box-shadow: 0 0 5px 2px $white;
+      box-shadow: 0 0 rem(5) rem(2) $white;
     }
   }
 }
@@ -48,12 +48,12 @@
 .about__text {
   order: 1;
   text-align: center;
-  line-height: 30px;
-  font-size: 20px;
+  line-height: rem(30);
+  font-size: rem(20);
   @include mq($bp_tablet) {
-    line-height: 36px;
-    font-size: 24px;
-    max-width: 610px;
+    line-height: rem(36);
+    font-size: rem(24);
+    max-width: rem(610);
     order: 2;
   }
 }
@@ -65,76 +65,76 @@
 }
 
 .arrow__link {
-  height: 30px;
-  width: 30px;
+  height: rem(30);
+  width: rem(30);
   position: absolute;
-  bottom: 60px;
+  bottom: rem(60);
   left: 50%;
   transform: translate(-50%, 0);
   @include mq($bp_tablet) {
-    height: 40px;
-    width: 40px;
-    bottom: 80px;
+    height: rem(40);
+    width: rem(40);
+    bottom: rem(80);
   }
 }
 
 .about__arrow {
   box-sizing: border-box;
-  height: 30px;
-  width: 30px;
+  height: rem(30);
+  width: rem(30);
   border-style: solid;
   border-color: $white;
-  border-width: 0px 2px 2px 0px;
+  border-width: 0 rem(2) rem(2) 0;
   -webkit-animation: move_down 1.5s ease-in-out infinite;
   -moz-animation: move_down 1.5s ease-in-out infinite;
   animation: move_down 1.5s ease-in-out infinite;
   &:hover {
     -webkit-animation-play-state: paused;
     animation-play-state: paused;
-    box-shadow: 0 5px 5px -5px $white, 5px 0 5px -5px $white;
+    box-shadow: 0 rem(5) rem(5) rem(-5) $white, rem(5) 0 rem(5) rem(-5) $white;
   }
   @include mq($bp_tablet) {
-    height: 40px;
-    width: 40px;
+    height: rem(40);
+    width: rem(40);
   }
 }
 
 @-webkit-keyframes move_down {
   0% {
-    -webkit-transform: translate(0, -20px) rotate(45deg);
+    -webkit-transform: translate(0, rem(-20)) rotate(45deg);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    -webkit-transform: translate(0, 10px) rotate(45deg);
+    -webkit-transform: translate(0, rem(10)) rotate(45deg);
     opacity: 0;
   }
 }
 @-moz-keyframes move_down {
   0% {
-    -moz-transform: translate(0, -20px) rotate(45deg);
+    -moz-transform: translate(0, rem(-20)) rotate(45deg);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    -moz-transform: translate(0, 10px) rotate(45deg);
+    -moz-transform: translate(0, rem(10)) rotate(45deg);
     opacity: 0;
   }
 }
 @keyframes move_down {
   0% {
-    transform: translate(0, -20px) rotate(45deg);
+    transform: translate(0, rem(-20)) rotate(45deg);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    transform: translate(0, 10px) rotate(45deg);
+    transform: translate(0, rem(10)) rotate(45deg);
     opacity: 0;
   }
 }
