--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -15,31 +15,21 @@
 }
 
 .contact__title {
-  font-size: 30px;
+  font-size: rem(30);
   text-transform: capitalize;
   margin: 0;
-  padding: 70px 20px 20px;
+  padding: rem(70) rem(20) rem(20);
   text-align: center;
 }
 
 .form__container {
   flex-grow: 1;
   @include mq($bp_tablet) {
-    display: grid;
-    width: 100%;
-    height: 100%;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    .form__group {
-      &:nth-of-type(1) {
-        grid-column: 1 / 2;
-      }
-      &:nth-of-type(3) {
-        grid-column: 2 / 3;
-        grid-row: 1 / 3;
-      }
-      &:nth-of-type(2) {
-        grid-column: 1 / 2;
+    display: flex;
+    justify-content: center;
+    .form__left {
+      .form__group {
+        height: 50%;
       }
     }
   }
@@ -57,25 +47,30 @@
   box-sizing: border-box;
   font-family: $playFair;
   background-color: $black;
-  padding: 50px 20px;
+  padding: rem(50) rem(20);
   width: 100%;
   border: none;
   color: $white;
-  font-size: 24px;
+  font-size: rem(24);
   outline: none;
   transition: all 0.3s ease-in-out;
   height: 100%;
   &::placeholder {
     color: $lightGray;
-    font-size: 24px;
-    line-height: normal;
+    font-size: rem(24);
   }
   &:focus {
     background-color: $darkGray;
   }
   @include mq($bp_tablet) {
-    padding: 50px 60px;
+    padding: rem(50) rem(60);
+    height: auto;
   }
+}
+
+.active__input {
+  transition: all 0.3s ease-in-out;
+  background-color: $darkGray;
 }
 
 .form__textarea {
@@ -83,28 +78,22 @@
 }
 
 .form__submit {
-  width: 100px;
-  height: 50px;
-  line-height: 50px;
-  box-shadow: 0px 0px 5px 1px $greenBlue;
-  border: 1px solid $greenBlue;
+  width: rem(100);
+  height: rem(50);
+  line-height: rem(50);
+  box-shadow: 0 0 rem(5) rem(1) $greenBlue;
+  border: rem(1) solid $greenBlue;
   display: block;
-  border-radius: 200px;
-  font-size: 18px;
+  border-radius: rem(200);
+  font-size: rem(18);
   font-weight: bold;
   text-transform: capitalize;
   text-align: center;
   color: $greenBlue;
   background: $black;
   padding: 0;
-  margin: 0 auto;
+  margin: rem(20) auto;
   cursor: pointer;
   font-family: $playFair;
-  letter-spacing: 1px;
-}
-
-.contact__icons-list {
-}
-
-.contact__icon {
+  letter-spacing: rem(1);
 }
