--- a/src/components/Contact/Progress/Progress.scss
+++ b/src/components/Contact/Progress/Progress.scss
@@ -2,13 +2,13 @@
 
 .progress__bar {
   position: relative;
-  height: 20px;
+  height: rem(20);
   width: 70%;
-  max-width: 280px;
-  margin: 30px auto;
-  border-radius: 50px;
-  border: 1px solid $lightGray;
-  box-shadow: 0px 0px 5px 1px $lightGray;
+  max-width: rem(280);
+  margin: rem(30) auto;
+  border-radius: rem(50);
+  border: rem(1) solid $lightGray;
+  box-shadow: 0 0 rem(5) rem(1) $lightGray;
 }
 
 .progress__fill {
