--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -78,7 +78,7 @@
   @include layoutAbsolute;
   height: 100%;
   width: 100%;
-  left: -10000px;
+  left: rem(-10000);
   transition: 0.4s;
   transition: all 0.4s ease-in;
   // animation-fill-mode: ;
